--- a/CapaPresentacion/FrmACF_BajaEvaluacionTecnica.resx
+++ b/CapaPresentacion/FrmACF_BajaEvaluacionTecnica.resx
@@ -289,4 +289,10 @@
         mhFlOOGvbF4J0fsi9vxWWBSCX9QCCxy93/4DvVath3Xz+04AAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="Seleccionar.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Seleccionar.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
